# 6883-Project

./: README.md
Project/: CMakeLists.txt  Stock.h  main.cpp
ProjectVer1/: CMakeLists.txt  Stock.h  StockDic.cpp  main.cpp
ProjectVer2/: CMakeLists.txt  Calculation.cpp  Calculation.h  Matrix.cpp  Matrix.h  Stock.h  StockDic.cpp  StockDic.h  announcements.csv  cookies.txt  gnuplot.cpp  gnuplot.h  main.cpp
Project_test/: CMakeLists.txt  Stock.h  StockDic.h  main.cpp
